# 2022JuliaCN_Talk_JNumPy

./: .gitignore  LICENSE
jnump-SparseArray/: pyproject.toml
jnump-SparseArray/jnp_spmatrix/: Project.toml  __init__.py
jnump-SparseArray/jnp_spmatrix/src/: jnp_spmatrix.jl
jnump-SparseArray/tests/: test_spmatrix.py
jnump-SparseArray/tests/extension/: Project.toml  __init__.py
jnump-SparseArray/tests/extension/src/: extension.jl
possion-equation/: bench_possion.py
possion-equation/possion/: Project.toml  __init__.py
possion-equation/possion/src/: possion.jl
